# router-agent

./: .dockerignore  .gitignore  ATTRIBUTION.md  LICENSE  Makefile  README.md  SUBMISSION.md  pyproject.toml
docker/: Dockerfile  Dockerfile.baseline  Dockerfile.local  Dockerfile.zero  README.md
examples/: tasks.json
experiments/: __init__.py  calibrate_local.py  confidence_separation.py  confidence_sweep.py  dev_rehearsal.py  model_bench.py  routerbench_dryrun.py  smart_local_bench.py
scripts/: batch_smoke.py  build_push.sh  launch.py  live_smoke.py
src/router_agent/: __init__.py  cascade.py  confidence.py  config.py  eval.py  heuristics.py  providers.py  repair.py  run.py  tasks.py  threshold.py
src/router_agent/calibration/: __init__.py  analyze.py  estimators.py  nested.py
src/tokengolf/: __init__.py  batch.py  config.py  heuristics.py  local_llm.py  providers.py  repair.py  run.py  schema.py
src/tokengolf/calibration/: __init__.py  apply.py  estimators.py  nested.py  recalibrate.py
submission/deck/: README.md  deck.html  github_card.html  github_logo.html  render_card.cjs  render_deck.cjs  render_logo.cjs
tests/: test_batch.py  test_batch_smoke.py  test_calibration_smoke.py  test_cascade.py  test_confidence.py  test_confidence_fast.py  test_confidence_sweep.py  test_config_normalize.py  test_eval.py  test_heuristics.py  test_launch.py  test_local_llm.py  test_model_bench.py  test_providers.py  test_repair.py  test_routerbench_dryrun.py  test_run.py  test_tasks.py  test_tasks_categories.py  test_threshold.py
